# tdt17_project

./: .gitignore  README.md  class_distribution.pkl  idun.sh  model_241908_samples.ipynb  model_251647_samples.ipynb  pyproject.toml  run.sh
tdt17_project/: data.py  loss.py  metrics.py  model.py  train.py  utils.py
