[tool.poetry]
name = "tdt17-project"
version = "0.1.0"
description = "Semantic segmentation project in TDT17 Visual Intelligence."
authors = ["Ulrik Røsby <ulrik@rosby.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"
click = "^8.1.7"
monai = "^1.3.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.1"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
